--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
             </div>
             <div id="tile_container"></div>
         </div>
+        <p><strong>Red:</strong> <span id="red-value"></span></p>
+        <div class="slidecontainer">
+            <input type="range" min="0" max="100" value="100" class="slider" id="red-range">
+        </div>
+        <p><strong>Green:</strong> <span id="green-value"></span></p>
+        <div class="slidecontainer">
+            <input type="range" min="0" max="100" value="100" class="slider" id="green-range">
+        </div>
+        <p><strong>Blue:</strong> <span id="blue-value"></span></p>
+        <div class="slidecontainer">
+            <input type="range" min="0" max="100" value="100" class="slider" id="blue-range">
+        </div>
     </body>
     <link rel="stylesheet" href="./build/bundle.css" />
     <script src="./build/bundle.js"></script>
