--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             </div>
             <div id="tile_container"></div>
         </div>
-        <p><strong>Red:</strong> <span id="red-value"></span></p>
+        <!-- <p><strong>Red:</strong> <span id="red-value"></span></p>
         <div class="slidecontainer">
             <input type="range" min="0" max="100" value="100" class="slider" id="red-range">
         </div>
@@ -22,7 +22,7 @@
         <p><strong>Blue:</strong> <span id="blue-value"></span></p>
         <div class="slidecontainer">
             <input type="range" min="0" max="100" value="100" class="slider" id="blue-range">
-        </div>
+        </div> -->
     </body>
     <link rel="stylesheet" href="./build/bundle.css" />
     <script src="./build/bundle.js"></script>
