--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <meta charset="utf-8">
     <head>
-        <title>SWP</title>
+        <title>aerial.js</title>
     </head>
     <body>
         <div id="page_container">
