good start on ui

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
         <title>aerial.js</title>
     </head>
     <body>
+        <div id="top_bar_container">
+            
+        </div>
+        <div id="layer_container">
+            <div id="layer_title">Layers</div>
+            <div id="layer_tools">
+                <button id="add_layer" class="layer_tools not_working" title="Add a layer">&#43</button>
+                <button id="delete_layer" class="layer_tools" title="Remove a layer">&#8722</button>
+                <button id="move_layer_up" class="layer_tools" title="Move layer up">&#11205</button>
+                <button id="move_layer_down" class="layer_tools" title="Move layer down">&#11206</button>
+            </div>
+            <div id="layers_holder">
+            </div>
+        </div>
         <div id="page_container">
             <div id="canvas_container">
                 <canvas id="canvas_map"></canvas>
