poor attempt at implementing second gui

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div id="processing_title" class="dropdown_title">Processing</div>
                 <div id="processing_menu" class="dropdown_menu">
                     <div class="dropdown_menu_option" data-id="rgbaManipulation">Change RGBA</div>
-                    <div id="rgbFiltering" class="dropdown_menu_option">Filter RGB</div>
+                    <div class="dropdown_menu_option" data-id="rgbFiltering">Filter RGB</div>
                     <div id="rgbPercentageFiltering" class="dropdown_menu_option">Filter RGB by %</div>
                     <div id="apply3x3Kernel" class="dropdown_menu_option">Apply 3x3 kernel</div>
                     <div id="averageLayers" class="dropdown_menu_option">Average layers</div>
