added new layer and reset layer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
             <div id="processing_gui">
                 <div id="close_processing_gui">&#10060</div>
                 <!-- indiviudal guis are appended here -->
+                <div id="processing_gui_actions">
+                    <button id="new_layer">New layer</button>
+                    <button id="reset_layer">Reset layer</button>
+                </div>
             </div>
         </div>
         <div id="top_bar_container">
