implemented kernel ui, added base pseudolayer

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <div id="processing_menu" class="dropdown_menu">
                     <div class="dropdown_menu_option" data-id="rgbaManipulation">Multiply RGBA</div>
                     <div class="dropdown_menu_option" data-id="rgbFiltering">Filter RGB</div>
-                    <div id="rgbPercentageFiltering" class="dropdown_menu_option">Filter RGB by %</div>
-                    <div id="apply3x3Kernel" class="dropdown_menu_option">Apply 3x3 kernel</div>
+                    <div class="dropdown_menu_option" data-id="rgbPercentageFiltering">Filter RGB by %</div>
+                    <div class="dropdown_menu_option" data-id="apply3x3Kernel">Apply 3x3 kernel</div>
                     <div id="averageLayers" class="dropdown_menu_option">Average layers</div>
                 </div>
             </div>
