added basic sobel edge detection

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                     <div class="dropdown_menu_option" data-id="rgbFiltering">Filter RGB</div>
                     <div class="dropdown_menu_option" data-id="rgbPercentageFiltering">Filter RGB by %</div>
                     <div class="dropdown_menu_option" data-id="apply3x3Kernel">Apply 3x3 kernel</div>
+                    <div class="dropdown_menu_option" data-id="sobelEdgeDetection">Apply sobel edge detection</div>
+                    <div class="dropdown_menu_option" data-id="greyscale">Greyscale</div>
                     <div id="averageLayers" class="dropdown_menu_option">Average layers</div>
                 </div>
             </div>
