implemented greyscale and stack layers guis.
stack layers gui good exercise, as first exposure to processing with multiple layers

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div class="dropdown_menu_option" data-id="apply3x3Kernel">Apply 3x3 kernel</div>
                     <div class="dropdown_menu_option" data-id="sobelEdgeDetection">Apply sobel edge detection</div>
                     <div class="dropdown_menu_option" data-id="greyscale">Greyscale</div>
-                    <div id="averageLayers" class="dropdown_menu_option">Average layers</div>
+                    <div class="dropdown_menu_option" data-id="stackLayers">Stack layers</div>
                 </div>
             </div>
             <div id="test_div2" class="dropdown">test</div>
