adding buffer around the viewport within LayerObject constructor

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div id="layer_title">Layers</div>
             <div id="layers_holder"></div>
         </div>
-        <div id="page_container">
+        <div id="map_container">
             <div id="canvas_container">
                 <canvas id="canvas_map"></canvas>
             </div>
